--- a/Javascript calculator/calculator.css
+++ b/Javascript calculator/calculator.css
@@ -24,8 +24,9 @@ body {
   display: block;
   background-color: #161616;
   width: 70rem;
-  height: 70.5rem;
-  padding: 0; }
+  height: 70.8rem;
+  padding: 0;
+  border: 2px solid #dfe6e9; }
 
 .textviewInput {
   display: block;
