--- a/Javascript calculator/calculator.scss
+++ b/Javascript calculator/calculator.scss
@@ -37,9 +37,11 @@ body {
     display: block;
     background-color: $color-primary;
     width: 70rem;
-    height: 70.5rem;
+    height: 70.8rem;
 
     padding: 0;
+
+    border: 2px solid $color-secondary;
 }
 
 .textviewInput {
