--- a/Javascript calculator/calculator.css
+++ b/Javascript calculator/calculator.css
@@ -8,6 +8,12 @@
 html {
   box-sizing: border-box;
   font-size: 62.5%; }
+  @media only screen and (max-width: 43.75em) {
+    html {
+      font-size: 50%; } }
+  @media only screen and (max-width: 34.375em) {
+    html {
+      font-size: 38.5%; } }
 
 body {
   font-family: "Open Sans", sans-serif;
@@ -21,11 +27,11 @@ body {
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
-  display: block;
+  display: grid;
+  grid-template-rows: 10rem 1fr;
   background-color: #161616;
   width: 70rem;
-  height: 70.8rem;
-  padding: 0;
+  height: 70rem;
   border: 2px solid #dfe6e9; }
 
 .textviewInput {
@@ -49,25 +55,11 @@ body {
   background-color: #161616;
   color: #ccc; }
 
-.table {
-  margin: 0;
-  width: 100%;
-  height: calc(100% - 10rem);
-  border-collapse: collapse;
-  max-height: 59.5rem; }
-  .table td,
-  .table th {
-    border: none;
-    padding: .1rem;
-    margin: 0; }
-
-td,
-tr,
-tbody {
-  padding: 0;
-  margin: 0;
-  border: none;
-  border-spacing: 0; }
+.calculator {
+  max-width: 70rem;
+  display: grid;
+  grid-template-columns: repeat(4, minmax(min-content, 1fr));
+  grid-template-rows: repeat(5, minmax(min-content, 1fr)); }
 
 input {
   width: 100%;
@@ -78,36 +70,33 @@ input {
   outline: none; }
 
 input[value="AC"] {
-  width: 212.9%;
   background-color: #d63031;
+  grid-column: 1 / 4;
   transition: all .2s ease; }
   input[value="AC"]:hover {
     border: 2px solid #dfe6e9;
     color: #dfe6e9; }
 
 input[value="/"] {
-  margin-left: 203%;
   transition: all .2s ease; }
   input[value="/"]:hover {
     border: 2px solid #dfe6e9;
     color: #dfe6e9; }
 
 input[value="0"] {
-  width: 156.5%;
+  grid-column: 1 / 3;
   transition: all .2s ease; }
   input[value="0"]:hover {
     border: 2px solid #dfe6e9;
     color: #dfe6e9; }
 
 input[value="."] {
-  margin-left: 101.5%;
   transition: all .2s ease; }
   input[value="."]:hover {
     border: 2px solid #dfe6e9;
     color: #dfe6e9; }
 
 input[value="="] {
-  margin-left: 101.7%;
   background-color: #0984e3;
   transition: all .2s ease; }
   input[value="="]:hover {
