--- a/Javascript calculator/calculator.scss
+++ b/Javascript calculator/calculator.scss
@@ -15,6 +15,14 @@ $color-numbers: #2f3640;
 html {
     box-sizing: border-box;
     font-size: 62.5%; // 10px = 1rem
+
+    @media only screen and (max-width: 43.75em) {
+        font-size: 50%;
+    }
+
+    @media only screen and (max-width: 34.375em) {
+        font-size: 38.5%;
+    }
 }
 
 body {
@@ -34,12 +42,12 @@ body {
 
     transform: translate(-50%, -50%);
 
-    display: block;
+    display: grid;
+    grid-template-rows: 10rem 1fr;
+
     background-color: $color-primary;
     width: 70rem;
-    height: 70.8rem;
-
-    padding: 0;
+    height: 70rem;
 
     border: 2px solid $color-secondary;
 }
@@ -74,31 +82,12 @@ body {
     color: #ccc;
 }
 
-.table {
-    margin: 0;
-    width: 100%;
-    height: calc(100% - 10rem);
+.calculator {
+    max-width: 70rem;
 
-    border-collapse: collapse;
-
-    td,
-    th {
-        border: none;
-        padding: .1rem;
-        margin: 0;
-    }
-
-    max-height: 59.5rem;
-}
-
-td,
-tr,
-tbody {
-    padding: 0;
-    margin: 0;
-    border: none;
-
-    border-spacing: 0;
+    display: grid;
+    grid-template-columns: repeat(4, minmax(min-content, 1fr));
+    grid-template-rows: repeat(5, minmax(min-content, 1fr));
 }
 
 input {
@@ -122,32 +111,29 @@ input {
 }
 
 input[value="AC"] {
-    width: 212.9%;
     background-color: #d63031;
+    grid-column: 1 / 4;
 
     @include hover-effect();
 }
 
 input[value="/"] {
-    margin-left: 203%;
 
     @include hover-effect();
 }
 
 input[value="0"] {
-    width: 156.5%;
+    grid-column: 1 / 3;
 
     @include hover-effect();
 }
 
 input[value="."] {
-    margin-left: 101.5%;
 
     @include hover-effect();
 }
 
 input[value="="] {
-    margin-left: 101.7%;
     background-color: #0984e3;
 
     @include hover-effect();
